Se corrige redacción en index.

--- a/default/templates/default/index.html
+++ b/default/templates/default/index.html
@@ -10,7 +10,7 @@
 <div class='articulo'>
 	<h3>{% trans "Un poco acerca de mi" %}</h3>
 	<p>
-		Soy desarrollador ABAP/WEB. Me especializo en ambas areas y brindo los siguientes servicios:
+		Soy desarrollador ABAP y desarrollador WEB. Me especializo en ambas areas y brindo los siguientes servicios:
 		<ul>
 			<li><a href="#sap">Consultoría técnica SAP</a></li>
 			<li><a href="#web">Desarrollo WEB</a></li>
