Se realizan correcciones de redacción. Se obtienen los proyectos ordenados por fecha de más reciente a más antiguo.

--- a/default/templates/default/index.html
+++ b/default/templates/default/index.html
@@ -15,16 +15,18 @@
 			<li><a href="#sap">Consultoría técnica SAP</a></li>
 			<li><a href="#web">Desarrollo WEB</a></li>
 		</ul>
-		Como consultor técnico SAP, tengo amplia experiencia en múltiples soluciones y herramientas, estoy certificado y he trabajado en una gran cantidad de proyectos con variadas características.
-		Como desarrollador WEB me especializo en desarrollo backend y frontend, utilizando software libre de gran calidad para su construcción.
+		Como consultor técnico SAP, tengo amplia experiencia en múltiples soluciones y herramientas, 
+    estoy certificado y he trabajado en una gran cantidad de proyectos con variadas características.
+		Como desarrollador WEB me especializo en desarrollo backend y frontend,
+    utilizando software libre de excelente calidad para su construcción.
 	</p>
 </div>
 
 <div class='articulo'>
 	<a id='sap'><h3>Consultoría técnica SAP</h3></a>
 	<p>
-		Mi experiencia laboral como consultor técnico SAP certificado es amplia. He participado en un total de trece proyectos SAP. Nueve de ellos de implementación. Tres de ellos en inglés. Seis de ellos realizados bajo el modelo CMMI-DEV.
-		Respecto de las herramientas y frameworks en los que tengo experiencia como desarrollador se pueden encontrar:
+		Mi experiencia laboral como consultor técnico SAP certificado es amplia. He participado en un total de catorce proyectos SAP. Nueve de ellos de implementación. Cuatro de ellos en inglés. Seis de ellos realizados bajo el modelo CMMI-DEV.
+		Respecto de las herramientas y frameworks en los que tengo experiencia como desarrollador se encuentran:
 		<ul>
 		<li>Workflow</li>
 		<li>Web Dynpro for ABAP</li>
