--- a/default/templates/default/index.html
+++ b/default/templates/default/index.html
@@ -25,7 +25,7 @@
 <div class='articulo'>
 	<a id='sap'><h3>Consultoría técnica SAP</h3></a>
 	<p>
-		Mi experiencia laboral como consultor técnico SAP certificado es amplia. He participado en un total de catorce proyectos SAP. Nueve de ellos de implementación. Cuatro de ellos en inglés. Seis de ellos realizados bajo el modelo CMMI-DEV.
+        Mi experiencia laboral como consultor técnico SAP certificado es amplia. He participado en un total de quince proyectos SAP. Nueve de ellos de implementación. Cuatro de ellos en inglés. Uno de ellos en portugués, teniendo un rol de arquitecto orientado tanto a aspectos funcionales como técnicos. Seis de ellos realizados bajo el modelo CMMI-DEV.
 		Respecto de las herramientas y frameworks en los que tengo experiencia como desarrollador se encuentran:
 		<ul>
 		<li>Workflow</li>
@@ -35,12 +35,14 @@
 		<li>Reportes: ALV Grid, ALV Jerarquico, ALV Tree</li>
 		<li>Formularios: Smartform, SAP Script</li>
 		<li>Análisis de performance</li>
+		<li>SAP Fiori / SAP UI5</li>
 		<li>Archiving</li>
 		<li>Automatización de pruebas: ABAP Unit, ECATT.</li>
 		<li>Módulos funcionales: FI, SD, MM, HCM, CO, PM.</li>
-		<li>Soluciones: ERP, CRM, SCM</li>
+		<li>Soluciones: ERP, CRM, SCM, SRM, Solman.</li>
 		</ul>
-		Cuento con sólidos conocimientos en programación orientada a objetos, paradigma que utilizo para desarrollar los requerimientos solicitados por el cliente.
+        Cuento también con sólidos conocimientos en programación orientada a objetos y adicionalmente tengo experiencia en tecnologías web, tanto en la capa frontend como en la capa backend, y en sistemas operativos Linux.
+        Por otro lado además de los conocimientos técnicos, tengo visión funcional de las necesidades del negocio, pudiendo así aportar soluciones para satisfacer sus necesidades, tanto funcionalmente como técnicamente.
 	</p>
 </div>
 
